@@ -19,7 +19,7 @@
 AC_PREREQ(2.59)
 AC_INIT(frysk-imports, 0.0)
 AM_INIT_AUTOMAKE([subdir-objects foreign no-installinfo no-exeext])
-AC_CONFIG_FILES([Makefile jline/Makefile tests/cniinner/Makefile])
+AC_CONFIG_FILES([Makefile jline/Makefile jargs/Makefile tests/cniinner/Makefile])
 
 AC_PROG_RANLIB
 
