@@ -1,3 +1,4 @@
+Makefile.in
 classes
 .classpath
 .project
